# intel-ai-builder

superclaw/: README.md
superclaw-ctl/: README.md  pyproject.toml
superclaw-ctl/packaging/: build.sh
superclaw-ctl/packaging/pyinstaller/: entry.py  superclaw-ctl.spec
superclaw-ctl/src/superclaw_ctl/: __init__.py  __main__.py  checks.py  cli.py  compose.py  config.py  display.py  download.py  gpu.py  health.py  registry.py  secrets.py  vllm_models.json
superclaw-ctl/src/superclaw_ctl/templates/: docker-compose.vllm.yml
superclaw/superclaw-ctl/: USER-GUIDE.md  pyproject.toml
superclaw/superclaw-ctl/packaging/: README.md  build.sh
superclaw/superclaw-ctl/src/superclaw_ctl/: __init__.py  checks.py  cli.py  config.py  display.py  docker.py  download.py  errors.py  health.py  models.py  registry.py  secrets.py  vllm_models.json
superclaw/superclaw-ctl/src/superclaw_ctl/templates/: docker-compose.vllm.yml
