[project]
name = "superclaw-ctl"
version = "1.0.0"
description = "CLI tool for managing SuperClaw vLLM model serving"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12,<1.0",
    "rich>=13.0,<14.0",
    "pydantic>=2.0,<3.0",
    "tomli-w>=1.0,<2.0",
    "httpx>=0.27,<1.0",
    "huggingface-hub>=0.23,<1.0",
]

[project.scripts]
superclaw-ctl = "superclaw_ctl.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]
build = [
    "pyinstaller>=6.0,<7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/superclaw_ctl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
exclude-newer = "7 days"
